# solana-sas-extension

./: .env.example  .gitignore  .gitmodules  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release-admin-cli.yml
.zenflow/tasks/link-alien-attestation-registry-b38a/: plan.md
admin-cli/: Cargo.toml  README.md
admin-cli/src/: handlers.rs  lib.rs  main.rs  utils.rs
binaries/: credential_signer-keypair.json  session_registry-keypair.json  solana_attestation_service-keypair.json
deploy/: 1_create_walien_mint.ts  2_initialize_transfer_hook.ts  3_transfer_authority_walien_mint.ts  4_add_metadata_walien_mint.ts  5_add_to_whitelist.ts  6_update_transfer_hook.ts
deploy/helpers/: common.ts
idl/: credential_signer.json  session_registry.json
programs/alien-id-transfer-hook/: Cargo.toml
programs/alien-id-transfer-hook/src/: constants.rs  error.rs  lib.rs
programs/alien-id-transfer-hook/src/instructions/: accept_authority.rs  add_to_whitelist.rs  initialize_config.rs  initialize_extra_account_meta_list.rs  mod.rs  remove_from_whitelist.rs  transfer_authority.rs  transfer_hook.rs  update_config.rs
programs/alien-id-transfer-hook/src/state/: hook_config.rs  mod.rs  whitelist_entry.rs
scripts/: build-all.sh  load-submodules.sh  local-test-sync-keys.sh
sdk/: constants.ts  encoding.ts  index.ts  instructions.ts  pda.ts  schema.ts  transfer-hook-sdk.ts
tests/: alien-id-transfer-hook.ts
