[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "admin-cli"
path = "src/main.rs"

[dependencies]
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
shellexpand = "3.1"
alien-id-transfer-hook = { path = "../programs/alien-id-transfer-hook", features = ["no-entrypoint"] }
bs58 = "0.5"

[lib]
crate-type = ["cdylib", "lib"]
